infra/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notedown-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: notedown-dev.davidahmadov.net
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: notedown-react-server-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notedown-react-svc
                port:
                  number: 8080
